--- a/RemotingEvents.Client/RemotingEvents.Client.csproj
+++ b/RemotingEvents.Client/RemotingEvents.Client.csproj
@@ -55,16 +55,25 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ErrorLogger.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="ClientFrm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="ClientFrm.Designer.cs">
+      <DependentUpon>ClientFrm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="ClientFrm.resx">
+      <DependentUpon>ClientFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
