--- a/RemotingEvents.Server/RemotingEvents.Server.csproj
+++ b/RemotingEvents.Server/RemotingEvents.Server.csproj
@@ -55,16 +55,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ErrorLogger.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="serverFrm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="serverFrm.Designer.cs">
+      <DependentUpon>serverFrm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="serverFrm.resx">
+      <DependentUpon>serverFrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
